Use URL for locations
Fixes issue #40